fix: adicionar link do midia kit

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
         {
             "source": "/participar",
             "destination": "https://docs.google.com/forms/d/e/1FAIpQLSe9Z8P6bMlgcuXr7xtI0MRNBHvqUrOaPiR_7u1LNOpIbLUBww/viewform"
+        },
+        {
+            "source": "/midia-kit",
+            "destination": "https://docs.google.com/presentation/d/e/2PACX-1vTG34DaVA9knBgVUyR8IoCZ3t25-mz51CjytP-XQlF2EqLYDqwtbCLWek1lfC3k9YgHXFgcdjd5hIZM/pub?start=false&loop=false&delayms=3000"
         }
     ]
 }
